Bug 1527978, bring back the old behavior of worker's postMessage spam limit, r=baku

--HG--
extra : rebase_source : 2a124802dd0999da3f1e08b4882d6660cea08fc7